# infraninja

./: .deepsource.toml  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_README.md
deploy/: README.md  Vagrantfile  test_deploy.py
infraninja/: common.py  jinn.py  netdata.py  security.py
infraninja/common/: reboot_system.py
infraninja/deploy/: common.py  security.py
infraninja/inventory/: config.py  hosts.py  jinn.py
infraninja/inventory/group_vars/: all.py  ubuntu.py
infraninja/netdata/templates/: netdata.conf.j2
infraninja/security/: __init__.py  deploy_sec_template.py  ssh_hardening.py  uae_ia_compliance.py
infraninja/security/alpine/: chkrootkit_setup.py  clamav_setup.py  dns_poisoning_protection_alpine.py  fail2ban_setup.py  install_tools.py  iptables_setup.py  lynis_setup.py  sec_setup_alpine.py  suricata_setup.py
infraninja/security/common/: acl.py  arp_poisoning_protection.py  disable_services.py  kernel_hardening.py  media_autorun.py  media_encryption.py  nftables_setup.py  ntp_hardening.py  password_policy.py  reboot_system.py  smtp_hardening.py  ssh_hardening.py  uae_ia_compliance.py  update_packages.py
infraninja/security/templates/: auditd_logrotate.j2  chkrootkit_scan_script.j2  iptables_logrotate.conf.j2  motd.j2  nftables_rules.nft.j2  postfix_main.cf.j2
infraninja/security/ubuntu/: apparmor_config.py  auditd_setup.py  chkrootkit_setup.py  clamav_setup.py  fail2ban_setup.py  install_tools.py  lynis_setup.py  (+7 more)
infraninja/utils/: motd.py  pubkeys.py
test/: README.md  Vagrantfile  i.py  inventory.py  test_deploy.py
(+13 files in other folders)
