[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infraninja"
version = "1.0.0"
authors = [
  { name="Mohammad Abu-khader", email="mohammad@kalvad.com" },
]
description = "ninja-level deployments designed to simplify infrastructure management and automate common tasks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = [
    "pyinfra",
    "requests"
]

[project.urls]
Homepage = "https://github.com/KalvadTech/infraninja"
Issues = "https://github.com/KalvadTech/infraninja/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
infraninja = [
    "security/templates/**/*.j2",
    "security/templates/**/*.j2"
]

[tool.setuptools.packages.find]
include = ["infraninja*"]
namespaces = true 